--- a/src/components/RegisterForm/RegisterForm.module.scss
+++ b/src/components/RegisterForm/RegisterForm.module.scss
@@ -1,1 +1,22 @@
 @import '../../styles/shared/colors';
+
+.form {
+  width: 380px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.label {
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.button {
+  cursor: pointer;
+  margin-top: 20px;
+  width: 250px;
+}
