--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -2,12 +2,14 @@
 
 .navigation {
   display: flex;
+  align-items: center;
   gap: 1rem;
 }
 
 .userMenu {
   margin-left: auto;
   display: flex;
+  align-items: center;
   gap: 1rem;
 }
 
